# docs/swagger.yaml
@@ -1,12 +1,4 @@
 definitions:
-  api.Response:
-    properties:
-      code:
-        type: integer
-      data: {}
-      message:
-        type: string
-    type: object
   db.Action:
     enum:
     - connect
@@ -77,6 +69,42 @@ definitions:
       is_pass:
         type: boolean
     type: object
+  db.CreateProfileRequest:
+    properties:
+      ak:
+        type: string
+      cloud:
+        type: string
+      name:
+        type: string
+      regions:
+        items:
+          type: string
+        type: array
+      sk:
+        type: string
+    required:
+    - ak
+    - cloud
+    - name
+    - regions
+    - sk
+    type: object
+  db.Key:
+    properties:
+      isDelete:
+        type: boolean
+      keyID:
+        type: string
+      keyName:
+        type: string
+      pemBase64:
+        type: string
+      profile:
+        type: string
+      uuid:
+        type: string
+    type: object
   db.Period:
     enum:
     - 1d
@@ -91,6 +119,37 @@ definitions:
     - OneMonth
     - OneYear
     - Forever
+  db.Policy:
+    properties:
+      actions:
+        items: {}
+        type: array
+      approval_id:
+        description: 审批ID
+        type: string
+      approver:
+        description: 审批人
+        type: string
+      created_at:
+        type: string
+      expires_at:
+        type: string
+      id:
+        type: string
+      is_deleted:
+        type: boolean
+      is_enabled:
+        type: boolean
+      name:
+        type: string
+      server_filter:
+        $ref: '#/definitions/utils.ServerFilter'
+      updated_at:
+        type: string
+      users:
+        items: {}
+        type: array
+    type: object
   db.PolicyMut:
     properties:
       actions:
@@ -110,6 +169,23 @@ definitions:
       users:
         items: {}
         type: array
+    type: object
+  db.Profile:
+    properties:
+      ak:
+        type: string
+      cloud:
+        type: string
+      name:
+        type: string
+      regions:
+        items:
+          type: string
+        type: array
+      sk:
+        type: string
+      uuid:
+        type: string
     type: object
   db.User:
     properties:
@@ -205,15 +281,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 创建审批策略
       tags:
       - Approval
@@ -244,15 +312,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 更新审批
       tags:
       - Approval
@@ -267,11 +327,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            items:
+              $ref: '#/definitions/db.Key'
+            type: array
       summary: 列出密钥
       tags:
       - Key
@@ -296,15 +354,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 添加密钥
       tags:
       - Key
@@ -328,14 +378,32 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 删除密钥
       tags:
       - Key
+  /api/v1/login:
+    post:
+      consumes:
+      - application/json
+      description: 登录
+      parameters:
+      - description: 用户名
+        in: formData
+        name: user
+        required: true
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: 登录
+      tags:
+      - User
   /api/v1/policy:
     get:
       consumes:
@@ -364,11 +432,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
+            items:
+              $ref: '#/definitions/db.Policy'
+            type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 获取策略列表
       tags:
       - Policy
@@ -393,15 +463,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 删除策略
       tags:
       - Policy
@@ -431,18 +493,106 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
+            type: string
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/api.Response'
+            type: string
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 更新策略
       tags:
       - Policy
+  /api/v1/profile:
+    get:
+      consumes:
+      - application/json
+      description: List profile
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Profile'
+            type: array
+      security:
+      - ApiKeyAuth: []
+      summary: List profile
+      tags:
+      - profile
+    post:
+      consumes:
+      - application/json
+      description: Create profile
+      parameters:
+      - description: profile
+        in: body
+        name: profile
+        required: true
+        schema:
+          $ref: '#/definitions/db.CreateProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Create profile
+      tags:
+      - profile
+  /api/v1/profile/:uuid:
+    delete:
+      consumes:
+      - application/json
+      description: Delete profile
+      parameters:
+      - description: profile uuid
+        in: path
+        name: uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Delete profile
+      tags:
+      - profile
+    put:
+      consumes:
+      - application/json
+      description: Update profile
+      parameters:
+      - description: profile
+        in: body
+        name: profile
+        required: true
+        schema:
+          $ref: '#/definitions/db.CreateProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Update profile
+      tags:
+      - profile
   /api/v1/user:
     get:
       consumes:
@@ -470,10 +620,6 @@ paths:
             items:
               $ref: '#/definitions/db.User'
             type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
       summary: 获取用户列表
       tags:
       - User
@@ -504,15 +650,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 追加用户组
       tags:
       - User
@@ -542,15 +680,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/api.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/api.Response'
+            type: string
       summary: 更新用户
       tags:
       - User
